; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_statesav.c_StateSav_ReadINT.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_statesav.c_StateSav_ReadINT.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@StateFile = common dso_local global i32 0, align 4
@nFileError = common dso_local global i64 0, align 8
@Z_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @StateSav_ReadINT(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %11 = load i32, i32* @StateFile, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load i64, i64* @nFileError, align 8
  %15 = load i64, i64* @Z_OK, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %13, %2
  br label %72

18:                                               ; preds = %13
  br label %19

19:                                               ; preds = %66, %18
  %20 = load i32, i32* %4, align 4
  %21 = icmp sgt i32 %20, 0
  br i1 %21, label %22, label %72

22:                                               ; preds = %19
  store i32 0, i32* %5, align 4
  %23 = load i32, i32* @StateFile, align 4
  %24 = call i64 @GZREAD(i32 %23, i32* %7, i32 1)
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %22
  %27 = call i32 (...) @GetGZErrorText()
  br label %72

28:                                               ; preds = %22
  %29 = load i32, i32* @StateFile, align 4
  %30 = call i64 @GZREAD(i32 %29, i32* %8, i32 1)
  %31 = icmp eq i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %28
  %33 = call i32 (...) @GetGZErrorText()
  br label %72

34:                                               ; preds = %28
  %35 = load i32, i32* @StateFile, align 4
  %36 = call i64 @GZREAD(i32 %35, i32* %9, i32 1)
  %37 = icmp eq i64 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %34
  %39 = call i32 (...) @GetGZErrorText()
  br label %72

40:                                               ; preds = %34
  %41 = load i32, i32* @StateFile, align 4
  %42 = call i64 @GZREAD(i32 %41, i32* %10, i32 1)
  %43 = icmp eq i64 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %40
  %45 = call i32 (...) @GetGZErrorText()
  br label %72

46:                                               ; preds = %40
  %47 = load i32, i32* %10, align 4
  %48 = and i32 %47, 128
  store i32 %48, i32* %5, align 4
  %49 = load i32, i32* %10, align 4
  %50 = and i32 %49, 127
  store i32 %50, i32* %10, align 4
  %51 = load i32, i32* %10, align 4
  %52 = shl i32 %51, 24
  %53 = load i32, i32* %9, align 4
  %54 = shl i32 %53, 16
  %55 = or i32 %52, %54
  %56 = load i32, i32* %8, align 4
  %57 = shl i32 %56, 8
  %58 = or i32 %55, %57
  %59 = load i32, i32* %7, align 4
  %60 = or i32 %58, %59
  store i32 %60, i32* %6, align 4
  %61 = load i32, i32* %5, align 4
  %62 = icmp ne i32 %61, 0
  br i1 %62, label %63, label %66

63:                                               ; preds = %46
  %64 = load i32, i32* %6, align 4
  %65 = sub nsw i32 0, %64
  store i32 %65, i32* %6, align 4
  br label %66

66:                                               ; preds = %63, %46
  %67 = load i32, i32* %6, align 4
  %68 = load i32*, i32** %3, align 8
  %69 = getelementptr inbounds i32, i32* %68, i32 1
  store i32* %69, i32** %3, align 8
  store i32 %67, i32* %68, align 4
  %70 = load i32, i32* %4, align 4
  %71 = add nsw i32 %70, -1
  store i32 %71, i32* %4, align 4
  br label %19

72:                                               ; preds = %17, %44, %38, %32, %26, %19
  ret void
}

declare dso_local i64 @GZREAD(i32, i32*, i32) #1

declare dso_local i32 @GetGZErrorText(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
